fix: scroll down button right shifted

--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -1,4 +1,5 @@
 .bounce {
+  transform: translateX(-50%);
   animation: bounce 2s infinite;
   animation-delay: 3s;
 }
@@ -8,12 +9,12 @@
   50%,
   80%,
   100% {
-    transform: translateY(0);
+    transform: translateX(-50%) translateY(0);
   }
   40% {
-    transform: translateY(-30px);
+    transform: translateX(-50%) translateY(-30px);
   }
   60% {
-    transform: translateY(-15px);
+    transform: translateX(-50%) translateY(-15px);
   }
 }
